-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8170696 | 8u152 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b01 |
| JDK-8171881 | 8u131 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b01 |
Currently we are including PlatformContextJava.h in GraphicsContext.h. Due to this PlatformContextJava type is leaking to all WebCore rendering module and causes recompilation whenever we change headers related to PlatformContextJava.
We have to just forward declare PlatformContextJava type in GraphisContext.h to avoid the type leaking.
We have to just forward declare PlatformContextJava type in GraphisContext.h to avoid the type leaking.
- backported by
-
JDK-8170696 Fix PlatformContextJava type leaking to GraphicsContext
-
- Resolved
-
-
JDK-8171881 Fix PlatformContextJava type leaking to GraphicsContext
-
- Resolved
-
- relates to
-
JDK-8170591 Modification of single java file in javafx.web causes recompilation of all other files
-
- In Progress
-