8170585: Fix PlatformContextJava type leaking to GraphicsContext

Reviewed-by: kcr