modules/javafx.web/src/main/native/Source/WebCore/platform/graphics/java/ImageJava.cpp
@@ -16,6 +16,7 @@
 #include "JavaEnv.h"
 #include "com_sun_webkit_graphics_GraphicsDecoder.h"
 #include "GraphicsContextJava.h"
+#include "PlatformContextJava.h"
 #include "Logging.h"
 
 class ImageBuffer;
